MW Changelog:
v20.4:
- ???

v20.3:
- fixed Soho Foundry tooltip;
- clarified Great Firewall, Menin Gate and Brandenburg Gate;

v20.2:
- fixed resource icons sizes;
- revived checking printouts for Mt. Paektu for a very, very rare situation when it causes map processing problems;

v20.1.2:
- fixed Skara Brae tootlip;

v20.1.1:
- fixed improvement requirements;

v20.1:
- Trans-Siberian Railway now grants gloabl yield boost to Strategic Resources (was local);

v20:
- World Wonders:
	- now required improvements must be worked by the interested city (were all in range);
- Natural Wonders:
	- excluded City-States from dummy placement (should help with no capital error);
- Resources:
	- shortened Monopoly texts (for better look in Trade Opportunities);
	- changed (mostly nerfed) unique luxury resources:
		- Giant Tortoise:
			- lost 1 Food on Camp;
			- Monopoly bonus halved (now 10% GA Length) and corrected in descriptions;
			- Research Lab now adds +2 Science;
		- Sylvite:
			- dropped Unhappiness reduction from the Monopoly;
		- Tern Egg:
			- deleted all flat yields;
			- halved Monopoly bonus (now +5% Faith on Empire);
	- deleted unnecessary icon sizes from atlas;
- text fixes (major are mentioned):
	- Forge of Damascus texts;

v19:
- World Wonders:
	- updated texts for WW changes from VP v3.8 (Uffizi, Chichen Itza, statu of Zeus);
	- added texts and compatibility for 3 new American WWs (previously they were National Wonders):
		- splash screens:
			- moved Slater Mill splash screen old change to American WW one (Soho Foundry is now left with original one);
			- West Point got new splash screen;
			- Smithsonian got a splash screen from EE;
		- quotes:
			- restored old Slater Mill quote with sound file assigned;
			- Smithsonian and West Point got new unique quotes;
	- files cleaning;
- Natural Wonders:
	- deleted "blank" model from Eye of the Sahara and Bermuda Triangle code (it should help with CTDs on restart, that didn't happen on my recent tests);